Fixed spacing issue

--- a/static/recipes.css
+++ b/static/recipes.css
@@ -4,6 +4,7 @@ body {
 }
 
 h1 {
+    padding-top: 30px;
     margin-left: 15%;
     color: #A9A9A9;
 }
@@ -11,7 +12,12 @@ h1 {
 .recipe_pics { 
     height: 70%;
     width: 70%;
-    padding-top: 30px;
+    margin-top: 40px;
+}
+
+.caption_pics { 
+    height: 70%;
+    width: 70%;
 }
 
 #recipe {
